/**
 * @author Oscar Arvidson and Erik Wetter
 * Interface for all objects in the world.
 */
public interface IPositionable {

    /**
     * Gets x position for a object in the world.
     * @return X position of a object in the world.
     */
    double getX();

    /**
     * Gets y position for a object in the world.
     * @return Y position of a object in the world.
     */
    double getY();

}
