import java.awt.*;

/**
 * @author Oscar Arvidson and Erik Wetter
 * Subclass of CarCarrierTruck
 */

public class MANTGXD38 extends CarCarrierTruck {

    public MANTGXD38() {
        super(Direction.NORTH, 200, 100, 2, 593, Color.lightGray, "MAN TGX D38", 2.5, 3, 18, 6, 2.20, 2, 5);
    }
}
